# ChangeLog for games-emulation/caps
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/caps/ChangeLog,v 1.14 2008/10/27 20:44:45 tupone Exp $

*caps-20071115 (27 Oct 2008)

  27 Oct 2008; Tupone Alfredo <tupone@gentoo.org> +caps-20071115.ebuild:
  Version bump. It includes an amd64 native library. Bug #158416

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing dholm from metadata.xml as per #24623.

  08 Feb 2007; Tristan Heaven <nyhm@gentoo.org> caps-20060612.ebuild:
  Error checking

  04 Feb 2007; Simon Stelling <blubb@gentoo.org> caps-20060612.ebuild:
  make sure libs are installed into the right libdir; bug 158416

  12 Nov 2006; Peter Volkov <pva@gentoo.org> -caps-20040303.ebuild:
  Removing old caps lib as nobody in portage uses it.

  09 Sep 2006; <ticho@gentoo.org> caps-20060612.ebuild:
  Stable on x86, bug #140022.

  29 Aug 2006; Joseph Jezak <josejx@gentoo.org> caps-20060612.ebuild:
  Marked ppc stable for bug #140022.

  20 Aug 2006; Simon Stelling <blubb@gentoo.org> caps-20060612.ebuild:
  stable on amd64

*caps-20060612 (12 Jun 2006)

  12 Jun 2006; Peter Volkov <pva@gentoo.org> metadata.xml,
  +caps-20060612.ebuild:
  Version bump. Changed library soname verion on 2. Thank Jonathan Heaney for
  report in bug 132914.

  24 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml,
  caps-20040303.ebuild:
  Marking stable on x86.

  31 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org> caps-20040303.ebuild:
  Changing nostrip to strip.

  15 Jun 2005; David Holm <dholm@gentoo.org> caps-20040303.ebuild:
  Stable on ppc.

*caps-20040303 (04 Mar 2004)

  04 Mar 2004; David Holm <dholm@gentoo.org> caps-20040303.ebuild,
  metadata.xml:
  Initial import.
