@@ -1,10 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST config_uae_ocs13_512c-512s.zip 1613 RMD160 7fcaa4410cf5b9d6f218e2cf7f53cd39339e4acf SHA1 2d02c2ecbaabcf7b64395696cbede3550bffda0a SHA256 972e43dea9b4a14f60fb97eebca9711e3610ea0027807b22dfc01ddc01d24574
 DIST ipfdevlib_linux-20060612.tgz 60265 RMD160 4dec90fd96021cf22ca012487828cad6aae1d6c1 SHA1 85d70262b77d82523603afdfd6ed26c4d9411c41 SHA256 29b436da18b42e23362bb346a2b870ae6ff3c0bd1fa7875610c12484bfe7af83
 DIST ipfdoc102a.zip 264258 RMD160 3957e9b6755dbec30b5680c090198cb4bfaf299f SHA1 cd9dd2dcc2ffa832c6b33c77f5b813e803a8e7e0 SHA256 7d434bb032b054eaaf256cb4fe1ff82038d839c566918860a2bdc3a2493692d3
 DIST ipflib_linux-amd64-20071115.tgz 24278 RMD160 510d32334a346ef6ed4bb6842744f27462c1a4d7 SHA1 fc343d27116463c92354647a3e9c70a837966447 SHA256 0cb6af9038faf91d7b3d8bc628ce2a3b4348eaefc5c24a48447e37d287ffe297
-DIST ipflib_linux-i686-20071115.tgz 33020 RMD160 5f6e90fe86157c08d84425558d984ba5658b5a61 SHA1 f71cc9cec3d0e8e791f67c056e065388fc4c20f5 SHA256 85f81a7e3b38aae129fe456e52562a3afe6fd884b33b23393fb0df97346aa6ef
-DIST ipflib_linux-ppc-20071115.tgz 31957 RMD160 cb8f751e5d2161ab7376730a14527f217f8079b6 SHA1 a352cd989c96b7d9c6c164a1afbd0d8be85ee18b SHA256 567daeb8d97184291cd832c4bb7c7284a3090d4ca4716eaab40876503e7a4962
 EBUILD caps-20060612.ebuild 1408 RMD160 88cf8bf9cf1dde84b767a5b6b86573b63a1601c2 SHA1 9011d0b6b8ac29b7c712b2a6ff42f744818a1387 SHA256 da3f169b83860c3dbe6cb5dc77c9ca2b239fd7667848c4bba6bce838e76128ab
-EBUILD caps-20071115.ebuild 1404 RMD160 60a192b08ddcd57607420526b6859ff35a5ddfa0 SHA1 82cf6c831f6e81843badfc217de036ec75f049bb SHA256 dca0cdc82634541fd1cf8a596fac56056cbb01d80878eed86d593a73b24bdd50
-MISC ChangeLog 1789 RMD160 efb2d4310020b2c432ad17cdfb260d8a51d11ba4 SHA1 86c71497505799eda9fa46d8b12db7d41ace25b3 SHA256 02b290c7e4e909cafd221860b315742c0da6db8cd12c2a5580e5ee439adb4cfb
+EBUILD caps-20071115.ebuild 1682 RMD160 3ad5ae34665a97fa23e83622c7157075d220e774 SHA1 6df21ba7b975be86100166a905e86efc0258ab81 SHA256 5877765fc90e62df85c1a611e39fb0a5abad3c7163661eaa5316b20de9c912b3
+MISC ChangeLog 1985 RMD160 a56bb87be8d494c217f7c42fdb62795f1cbe5298 SHA1 c8b3a62519bb4554f030ec84fc04cabe52d72b03 SHA256 e6cd7b68d39a9603b533760d2e13b8e0ea9d556d94ae0456b6d023525598c489
 MISC metadata.xml 598 RMD160 38c8fa53dd83d9c078c4ec5b80ba0621a52b7077 SHA1 9b13a17b2735f71f23f744d40598cbd9a9bad53d SHA256 cbc0001c6d04077d334c19515187f2785daa83a22af3924f342b942237a17130
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkkGqDEACgkQmAYtPIR1e6SnRwCgoaGtBGG9VpRi20b8aKFp0bax
+NmwAn2Blr5cegKcSUWcn+IJWkFBx7ZG0
+=JvFG
+-----END PGP SIGNATURE-----
