@@ -1,6 +1,10 @@
 # ChangeLog for games-emulation/caps
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/caps/ChangeLog,v 1.14 2008/10/27 20:44:45 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/caps/ChangeLog,v 1.15 2008/10/28 05:50:30 tupone Exp $
+
+  28 Oct 2008; Tupone Alfredo <tupone@gentoo.org> caps-20071115.ebuild:
+  Upstream added only amd64 library. Reverting binary of x86 and ppc.
+  Comment #4 on bug #158416 by agent_jdh@yahoo.co.uk
 
 *caps-20071115 (27 Oct 2008)
 
